Changelog
=========

0.1 (unreleased)
----------------

* Fix KeyError when accessing previously checked in content through Acquisition
  wrapper
  http://code.google.com/p/dexterity/issues/detail?id=270
  [anthonygerrard]

0.1b3 (2011-09-24)
------------------

* Make sure that changes to the subjects field are carried over when the
  working copy is checked in.
  [swampmonkey]

* Fix broken dependency declaration.
  [danjacka, jonstahl]

0.1b2 (2011-06-16)
------------------

* Declare plone.app.versioningbehavior and plone.app.referenceablebehavior
  as test dependencies.
  [danjacka, davisagli]

* Declare the implicit dependency on plone.app.relationfield.
  [davisagli]

0.1b1 (2011-05-20)
------------------

* Add functional tests.
  [anthonygerrard, davisagli]

0.1a2 (2011-01-25)
------------------

* Fixed to avoid try setting values on read-only fields.
  [deo]

* Improved documentation and usage information.
  [deo]


0.1a1 (2011-01-24)
------------------

* Renamed package to plone.app.stagingbehavior.
  [deo]

* Made sure to fire an IAfterCheckinEvent so that the iterate
  locking handler (handleCheckin) removes the lock from the
  baseline object.
  [deo]

* Added a workaround to allow the checkin operation to succeed.
  Sent message to the mailing list to discuss the issue.
  [deo]

* Fixed to only use the plone.app.stagingbehavior policy for Dexterity
  content, avoiding any interference with Archetypes content.
  [deo]

* Removed dependency to plone.relations, made some cleanups.
  [jbaumann]

* Added creator attribute to the StagingRelationValue.
  [jbaumann]

* Fixed AttributeError processForm in checkin.
  [jbaumann]

* Implemented simple checkin process, which just copies all field values.
  [jbaumann]

* Cleaned up the code a little bit.
  [jbaumann]

* First implementation.
  [jbaumann]